--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
 .top{
     border: 4px black solid;
     margin: 10px;
+    padding: 5px;
 }
 .columns{
     display: flex;
@@ -19,14 +20,22 @@
     width:50%;
     margin-right: 10px;
     margin-left: 0px;
+    padding: 5px;
+    background-color: aqua;
 }
 .column2{
     border: 4px black solid;
     width:50%;
     margin-left: 10px;
     margin-right: 0px;
+    padding: 5px;
+    background-color: aqua;
 }
 .bottom{
     border: 4px black solid;
     margin: 10px;
+    padding: 5px;
+}
+html{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
